# googletest_cpp

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: demo.cpp  demo.h  main.cpp
test/: demo_tests.cpp
